chap select for jump ques tiers from chap to ques ids correctly

--- a/static/style/main.css
+++ b/static/style/main.css
@@ -25,6 +25,10 @@ footer {
   color: rgba(0,0,0,0.25);
 }
 
+.point {
+  cursor: pointer;
+}
+
 /*projects*/
 .angular-leaflet-map {
   margin: 0px;
